fixed so work with new data format for the shifts

--- a/www/scss/partials/_cafe.scss
+++ b/www/scss/partials/_cafe.scss
@@ -4,25 +4,20 @@
    margin-top: 1em;
   }
 
+  .timeline-day:nth-child(5n+1) {
+    border-right: 2px solid #d6d6d6;
+  }
+
   .timeline-item-inner {
     height: 18%;
-    margin-top: 1em;
-    margin-bottom: 1em;
     background-color: #EB7125;
   }
 
-  .hilbert-avatar {
-    height: 31vw;
-    width: 31vw;
-    background-color: white;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url("../img/hilbert.png");
-    margin: auto;
-    box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2);
-    border-radius: 100%;
-    border: 3px solid #d6d6d6;
+  .cafe-shift:nth-child(even) .timeline-item-inner{
+    margin-bottom: 2em;
   }
+
+
 
   .shift-update {
     background-color:#EB7125;
@@ -41,4 +36,19 @@
     color: black !important;
   }
 
+}
+.shift-content {
+  .hilbert-avatar {
+    height: 25vw;
+    width: 40vw;
+    background-color: white;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("../img/hilbert.png");
+    margin: auto;
+    box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.2);
+    //border-radius: 100%;
+    //border: 3px solid #d6d6d6;
+  }
 }
